# leorover_isaac

./: .gitignore  CLOUD_SETUP.md  INSTALL.md  LICENSE  MIGRATION_NOTES.md  PORTING_ROADMAP.md  README.md  SETUP_HISTORY.md  adr_curriculum.py  analyze_latest.py  analyze_training.py  config.py  evaluate_training.py  experiment_gui.py  factorial_screening.py  pyproject.toml
leorover_isaac/: __init__.py
leorover_isaac/assets/leo_rover/: README.md  __init__.py
leorover_isaac/assets/leo_rover/source/: Universal_camera_support.stl  leo_robot_1_ros2_shared.urdf
leorover_isaac/common/: __init__.py  lqr_baseline.py  mars_terrain_numpy.py  path_generation.py  path_templates.py  random_path_generator.py  terrain_stats.py  trajectory_profile.py
leorover_isaac/controllers/: README.md  __init__.py  lqr.py
leorover_isaac/envs/: README.md  __init__.py  leo_rover_base_env.py  leo_rover_flat_env.py  leo_rover_mars_env.py  leo_rover_mars_hybrid_env.py
leorover_isaac/tasks/: README.md  __init__.py  leo_rover_agents.py
leorover_isaac/terrain/: README.md  __init__.py  mars_heightfield.py
leorover_isaac/utils/: README.md  __init__.py  recorder.py
scripts/: README.md  compare_hybrid_vs_lqr.py  connect-runpod.ps1  convert_urdf.py  diag_drive.py  play.py  pod_setup.sh  stop-runpod.ps1  train.py
